# arxiv-research-agent

./: .dockerignore  .gitignore  README.md  deploy_cloud_run.sh  pyproject.toml  requirements.txt  test.txt
.github/workflows/: cd.yml  ci.yml
infrastructure/: dev.tfvars  main.tf  outputs.tf  prod.tfvars  variables.tf
notebooks/: data_exploration.ipynb
src/agent_api/: Dockerfile  main.py
src/agent_api/api/v1/: chat.py
src/agent_api/core/: config.py  rag_service.py
src/agent_api/models/: chat.py  extract.py
src/data_pipeline/: data_cleaner.py  embed_generator.py  nlp_extractor.py  run_pipeline.sh  vector_db_loader.py
src/shared/: gcp_clients.py  gcp_clients_old.py
tests/agent_api/: test_chat_endpoint.py
