[project]
name = "arxiv-research-agent"
version = "0.1.0"
description = "GCP-native RAG over arXiv with Vertex AI and Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
